--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@ footer p{
 
 .carousel {
   width: 100%;
-  height: 400px;
+  height: 420px;
   position: relative;
   overflow: hidden;
   margin-top: 30px;
@@ -507,7 +507,8 @@ footer p{
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
-  height: 400px;
+  height: 420px;
+  margin-left: 0px;
   color: white;
   text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.7);
   padding: 20px 0px;
