--- a/index.html
+++ b/index.html
@@ -485,6 +485,7 @@ footer p{
   position: relative;
   overflow: hidden;
   margin-top: 30px;
+  margin-left:0px;
   border-radius: 15px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
 }
@@ -527,7 +528,7 @@ footer p{
 
 .carousel-item a {
  text-decoration: none;
- color: #2bdfff;
+ color: red;
 }
 
 .carousel-item a:hover {
