--- a/index.html
+++ b/index.html
@@ -692,13 +692,13 @@ footer p{
           <button class="playlist-btn" onclick="playVideo('ZU0_5KMaMM4')"><span>2. Сабақ:</span> AmoCRM платформасымен танысу</button>
         </li>
         <li>
-          <button class="playlist-btn" onclick="playVideo('dQw4w9WgXcQ')"><span>3. Сабақ:</span> Воронка продаж</button>
+          <button class="playlist-btn" onclick="playVideo('g3caUF1ZR4c')"><span>3. Сабақ:</span> Воронка продаж</button>
         </li>
         <li>
-          <button class="playlist-btn" onclick="playVideo('tgbNymZ7vqY')"><span>4. Сабақ:</span> Самомативация</button>
+          <button class="playlist-btn" onclick="playVideo('ZU0_5KMaMM4')"><span>4. Сабақ:</span> Самомативация</button>
         </li>
         <li>
-          <button class="playlist-btn" onclick="playVideo('kJQP7kiw5Fk')"><span>5. Сабақ:</span> Сату техникасы</button>
+          <button class="playlist-btn" onclick="playVideo('lMrdLKy6L8Y')"><span>5. Сабақ:</span> Сату техникасы</button>
         </li>
       </ul>      
       <div class="playlist-player">
