--- a/index.html
+++ b/index.html
@@ -673,10 +673,10 @@ footer p{
                 <p>Оснаватель Отан Холдинг</p>
                 <a href="https://www.instagram.com/malik__nurgeldiuly">@malik_nurgeldiuly</a>
             </div>
-            <div class="carousel-item" style="background-image: url('https://i.imghippo.com/files/jcB5327k.png');">
-                <h3>Дәурен Болатұлы</h3>
+            <div class="carousel-item" style="background-image: url('https://s.iimg.su/s/26/UDZRhxsctDTuyqGb3DkKU2ElCmFpkuQQ9ATFza9C.png');">
+                <h3>Елдос Қайратұлы</h3>
                 <p>Директор Balalife</p>
-                <a href="https://www.instagram.com/dbolatovish">@dbolatovish</a>
+                <a href="https://www.instagram.com/dbolatovish">@eldosnk</a>
             </div>
         </div>
     </div>
